Location based notifications toggle
